--- a/package.json
+++ b/package.json
@@ -4,25 +4,31 @@
   "main": "./public/electron.js",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.4.2",
     "@testing-library/dom": "^7.14.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
     "electron-is-dev": "^1.2.0",
+    "googleapis": "39",
     "history": "^4.10.1",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
+    "moment": "^2.27.0",
+    "newsapi": "^2.4.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-popper": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1",
     "sass": "^1.26.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "typescript": "^3.9.5"
   },
   "scripts": {
@@ -48,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.10.3",
     "concurrently": "^5.2.0",
     "electron": "^9.0.3",
     "electron-builder": "^22.7.0",
