--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "electron-is-dev": "^1.2.0",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "googleapis": "39",
     "history": "^4.10.1",
     "jquery": "^3.5.1",
@@ -20,6 +24,9 @@
     "moment": "^2.27.0",
     "newsapi": "^2.4.0",
     "node-sass": "^4.14.1",
+    "path": "^0.12.7",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -29,6 +36,7 @@
     "sass": "^1.26.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "sequelize": "^6.3.3",
     "typescript": "^3.9.5"
   },
   "scripts": {
